[package]
name = "robocraft"
version = "0.0.25"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
colored = "1"
dyn-clone = "1"
zenoh = { version = "0.10.1-rc", features = ["shared-memory"]}
arrow = "51.0.0"
parquet = "51.0.0"
rerun = "0.15.1"
tracing = "0.1.40"


