[package]
name = "robocraft_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
    name = "rc"
    path = "src/main.rs"


[dependencies]
    tokio = { version = "1", features = ["full"] }
    clap = { version = "4.3.23", features = ["derive"] }
    anyhow = "1.0.75"
    getset = "0.1.2"
    colored = "2.0.4"